--- a/servant-reflex.cabal
+++ b/servant-reflex.cabal
@@ -45,7 +45,7 @@ library
   default-language: Haskell2010
 
 executable example
-  build-depends: reflex, servant-reflex, base, scientific, servant, reflex-dom, text
+  build-depends: aeson, reflex, servant-reflex, base, scientific, servant, reflex-dom, text
   default-language: Haskell2010
   main-is: Example.hs
   other-modules: API
